# mrflocalization_detector

./: CMakeLists.txt  package.xml
include/mrflocalization_detector/: Pose.h  mrf.h
launch/: mrf.launch
src/: mrf.cpp  node.cpp
